image change commit

--- a/styles.css
+++ b/styles.css
@@ -124,15 +124,15 @@ body {
 }
 
 .Rock .icon {
-    background-image: url('https://s3-alpha-sig.figma.com/img/e2f5/14e9/7d8f1b87d406a7bced07190e2c368075?Expires=1736121600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=gpDXfFrRiYL2k61IlL7-Css-yI~wxRi~hdbcvODOHd-KLCcY93G22GcrIB9J4kjnwvDvVnWRZLP2j~uCiTMXl49iqZ76HsAfgKNk2vFqh8xi-rNj0mbtVu2sC3OiXHhge62HZstnb~w4H0ixcUj3Nl18yNQ2rnpzX0ZMiMDQjV7wnIqoOjjcvhfLVM9rhKnumcF8mDCPX6n8LBxzDqEOrYhp-fHm0VeZEQ1gQayoSaPNkz486OwffuE4v8-GOe9V6XwbsV~OJqcVapOaDJJE~TTQEOveSdhTuun3ER3m~dJ242X-M8iRhvJY9JhnmWroETyKN3tFK0ZliQeNsjnIrA__');
+    background-image: url('https://s3-alpha-sig.figma.com/img/e2f5/14e9/7d8f1b87d406a7bced07190e2c368075?Expires=1737936000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=Akg1iSLX0kxq0Eoc3eVhQxalnw~CgEkSB3ahWxPmWRItehdcIZaZZKJBl-UrjrJcEQPKMTms5vo9DQ7GZI5aTMOSuhUBdkN5aRxmEfaXsmAMz1HPadwRvZhmyTKZ~n5BhUMa4G2B6CgYZfSGHawKNyPCud-WPBUXnbh3~Ky7QE~eBe9I9V~vAJQaaz5y3amdP2YJbz5xBpe4B9~KoaFBPjih9ZswWETJpJ6hWzPZLytjY7TCWe8lA402OrfNmJVMmlESqKp9j-J1yB1cMkr0t1qsFKBt3kyj0JY4tR7ub27g2Q6~blSiaBaf~C~aGzg9GAlkxsZCoIGmngBArDUZRg__');
 }
 
 .Scissors .icon {
-    background-image: url('https://s3-alpha-sig.figma.com/img/388b/63da/8e9ba336eea3ea7f107fc48755a6b68d?Expires=1736121600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=CfaM3IGpLoT0qXu3Yv9N9Hr9n1UaoWJG3-4IzboT7~EcjtH5-bWLEaeMOgKVOolSz2RGTWa3Mg9EqeAZ-mBGh2i3oX3Alklk-CNQWYToZV3rEfUMGzn9PaXSFXzgGG1AUcKyDpXAhdUTVnnEqYGFki0iZZgVd581FAlg~Jqos8SWkVfn6y4Ee9h4QOeYR4M5wErXIrKIDO~iqoerxZhAm69WKjB5QkeUXkfWRwh~uXGQbYeHMLBI59SBMzpD0D3YN9hl9H02AQIlGkEojbWAZyBmDkONQdFKs9MghE4lXs21JMhwdVjWmoTaZXy9Ytxddq6OO-~bPBEC7elaZO6gLg__');
+    background-image: url('https://s3-alpha-sig.figma.com/img/388b/63da/8e9ba336eea3ea7f107fc48755a6b68d?Expires=1737936000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=gw5Tx~TDPH3iFPmirCfff7eMrl7r0DHac1DF0l~3Mngysz7RIVW0PX0k1IPNqPEy8yFJ1QUyZAtdgOtxo-GAWRf3owEDCvoiKQZOeEcLTH6K-mOp16N0ICi61pe9IGxh6t-2CwRhvad0aiuaIlBUdDYjOJ3MsCKCpdmJaCTZ8bonbJZgPB-TktPK2TEVSp9A195~IrvDXG0pRpWWhd4tyBvR3MZTinxhFn1gwsazV0-CEwppbz05ZFSfZ3J4wLKWA6n7YhSEswBapj5gmKWvz4Zma63OLl3lpr~zy1QrIt1sLD9mH24ysSoa8ToZTw9hmb~vgNdTG1XqDU1YzBP-tg__');
 }
 
 .Paper .icon {
-    background-image: url('https://s3-alpha-sig.figma.com/img/9e58/4d5f/879bf162796082bc4c606349436e0c52?Expires=1736121600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=GA1VkmR-fYAZCVLYtylUSpD9i-OZtnPljUXUpKiIuc9NBn1RTZb1okY0QIfkqv4RHxCBkGX6a3uXw-V9tldH83K-YU0M0~aW86Z8-VTlg18Ji98ziznKxQtrMtnBlIVO59oEOgoy4kn5ZjT9ssPCUjKXjcA2KAE7DFYUed6iXRvMgWmqpk7fsq1WS4w6bEWcYkP8R3ZZYweG-7TbWBqBIdvTwj6ywfBYEJxKGXOQkM2CPRmGG0mXo7Ehu9a5RqK0T36T0UU60h25kmYhrO8xYmI9GvJx5RStLZH6dcnXZ16zOjUysRLz7p~mvzp5jfXiMv0ok1FcYGN5dXgQCMcPzA__');
+    background-image: url('https://s3-alpha-sig.figma.com/img/9e58/4d5f/879bf162796082bc4c606349436e0c52?Expires=1737936000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=oIVUoTREsmpDVPsSAU8FoHdnBH-v0vyDK0cbqGKWZClNXN1APekuboPdxNlhjJ1j1BqgX21ri0rlfyujeIW6XV9dSrIC3sRw2JV1zrt-SoNROqI0VzJmkBfIqkESlAa45u~kUEzpOVTi1YTPE-9m8nA60c1PAG~cS0HeQgRZshZ5ylFXzcw9IjyWXrGeO03Fq3hr3w1sC3YJ98gO743YFzg-YWPsjaOmv3JwjkZ9xifXXfP3aYaiqnFlKe~JI~lHJiOA7gG8ZbWbc8iDInN4MFfm3~pTsRbV2KLUig-y4s-mwNHnGvlzWBPoUReJ1PPNb7dinugQZBbz4-fLv0wRkg__');
 }
 .triangle{
     width: 350px;
@@ -490,7 +490,7 @@ body {
     align-items: center; 
 }
 .Paper1 .icon1 {
-    background-image: url('https://s3-alpha-sig.figma.com/img/9e58/4d5f/879bf162796082bc4c606349436e0c52?Expires=1736121600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=GA1VkmR-fYAZCVLYtylUSpD9i-OZtnPljUXUpKiIuc9NBn1RTZb1okY0QIfkqv4RHxCBkGX6a3uXw-V9tldH83K-YU0M0~aW86Z8-VTlg18Ji98ziznKxQtrMtnBlIVO59oEOgoy4kn5ZjT9ssPCUjKXjcA2KAE7DFYUed6iXRvMgWmqpk7fsq1WS4w6bEWcYkP8R3ZZYweG-7TbWBqBIdvTwj6ywfBYEJxKGXOQkM2CPRmGG0mXo7Ehu9a5RqK0T36T0UU60h25kmYhrO8xYmI9GvJx5RStLZH6dcnXZ16zOjUysRLz7p~mvzp5jfXiMv0ok1FcYGN5dXgQCMcPzA__');
+    background-image: url('https://s3-alpha-sig.figma.com/img/9e58/4d5f/879bf162796082bc4c606349436e0c52?Expires=1737936000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=oIVUoTREsmpDVPsSAU8FoHdnBH-v0vyDK0cbqGKWZClNXN1APekuboPdxNlhjJ1j1BqgX21ri0rlfyujeIW6XV9dSrIC3sRw2JV1zrt-SoNROqI0VzJmkBfIqkESlAa45u~kUEzpOVTi1YTPE-9m8nA60c1PAG~cS0HeQgRZshZ5ylFXzcw9IjyWXrGeO03Fq3hr3w1sC3YJ98gO743YFzg-YWPsjaOmv3JwjkZ9xifXXfP3aYaiqnFlKe~JI~lHJiOA7gG8ZbWbc8iDInN4MFfm3~pTsRbV2KLUig-y4s-mwNHnGvlzWBPoUReJ1PPNb7dinugQZBbz4-fLv0wRkg__');
     width: 60px;
     height: 60px;
     background-size: cover;
@@ -511,7 +511,7 @@ body {
     align-items: center; 
 }
 .Paper2 .icon2 {
-    background-image: url('https://s3-alpha-sig.figma.com/img/9e58/4d5f/879bf162796082bc4c606349436e0c52?Expires=1736121600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=GA1VkmR-fYAZCVLYtylUSpD9i-OZtnPljUXUpKiIuc9NBn1RTZb1okY0QIfkqv4RHxCBkGX6a3uXw-V9tldH83K-YU0M0~aW86Z8-VTlg18Ji98ziznKxQtrMtnBlIVO59oEOgoy4kn5ZjT9ssPCUjKXjcA2KAE7DFYUed6iXRvMgWmqpk7fsq1WS4w6bEWcYkP8R3ZZYweG-7TbWBqBIdvTwj6ywfBYEJxKGXOQkM2CPRmGG0mXo7Ehu9a5RqK0T36T0UU60h25kmYhrO8xYmI9GvJx5RStLZH6dcnXZ16zOjUysRLz7p~mvzp5jfXiMv0ok1FcYGN5dXgQCMcPzA__');
+    background-image: url('https://s3-alpha-sig.figma.com/img/9e58/4d5f/879bf162796082bc4c606349436e0c52?Expires=1737936000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=oIVUoTREsmpDVPsSAU8FoHdnBH-v0vyDK0cbqGKWZClNXN1APekuboPdxNlhjJ1j1BqgX21ri0rlfyujeIW6XV9dSrIC3sRw2JV1zrt-SoNROqI0VzJmkBfIqkESlAa45u~kUEzpOVTi1YTPE-9m8nA60c1PAG~cS0HeQgRZshZ5ylFXzcw9IjyWXrGeO03Fq3hr3w1sC3YJ98gO743YFzg-YWPsjaOmv3JwjkZ9xifXXfP3aYaiqnFlKe~JI~lHJiOA7gG8ZbWbc8iDInN4MFfm3~pTsRbV2KLUig-y4s-mwNHnGvlzWBPoUReJ1PPNb7dinugQZBbz4-fLv0wRkg__');
     width: 60px;
     height: 60px;
     background-size: cover;
